test/99-ingress-unconfigured.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: k8s-poc.devopscheats.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service: 
            name: prometheus-service
            port: 
              number: 80
